input focus for inscription on mobile and some fixes

--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ body {
 
 .players-block {
 	margin: 1rem 0;
-	width: 300px;
+	width: 298px;
 }
 
 .playerlist {
